# GameOfLife

./: CMakeLists.txt  game_of_life.js  game_of_life.sln  game_of_life.wasm  index.html  main.cpp
.github/workflows/: deploy.yml  msbuild.yml
game_of_life/: cpp.hint  game.cpp  game.hpp  game_of_life.cpp  game_of_life.rc  game_of_life.vcxproj  game_of_life.vcxproj.filters  gl.cpp  gol.frag.glsl  resource.h
game_of_life/src/: Resource.h  game.cpp  game.hpp  game_of_life.cpp  game_of_life.rc  gl.hpp  gol.frag.glsl.v1.h
glad/: gles2.h
glad/include/glad/: gles2.h
shaders/: frag.glsl  vert.glsl
